// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ISIS Instruments table component renders correctly 1`] = `
<WithStyles(VirtualizedTable)
  columns={
    Array [
      Object {
        "cellContentRenderer": [Function],
        "dataKey": "FULLNAME",
        "filterComponent": [Function],
        "icon": <Memo(TitleIcon) />,
        "label": "instruments.name",
      },
    ]
  }
  data={
    Array [
      Object {
        "DESCRIPTION": "foo bar",
        "FACILITY_ID": 8,
        "FULLNAME": "Test instrument 1",
        "ID": 1,
        "NAME": "Test 1",
        "URL": "test url",
      },
      Object {
        "DESCRIPTION": "foo bar",
        "FACILITY_ID": 8,
        "ID": 2,
        "NAME": "Test 2",
        "URL": "test url",
      },
    ]
  }
  detailsPanel={[Function]}
  loadMoreRows={[Function]}
  loading={false}
  onSort={[Function]}
  sort={Object {}}
  totalRowCount={0}
/>
`;

exports[`ISIS Instruments table component renders details panel correctly and it sends off an FetchInstrumentDetails action 1`] = `
<div
  id="details-panel"
  style={
    Object {
      "minWidth": 0,
    }
  }
>
  <WithStyles(ForwardRef(Tabs))
    aria-label="instruments.details.tabs_label"
    onChange={[Function]}
    scrollButtons="auto"
    value="details"
    variant="scrollable"
  >
    <WithStyles(ForwardRef(Tab))
      aria-controls="instrument-details-panel"
      id="instrument-details-tab"
      label="instruments.details.label"
      value="details"
    />
  </WithStyles(ForwardRef(Tabs))>
  <div
    aria-labelledby="instrument-details-tab"
    hidden={false}
    id="instrument-details-panel"
    role="tabpanel"
  >
    <WithStyles(ForwardRef(Grid))
      className="makeStyles-root-53"
      container={true}
      direction="column"
    >
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs={true}
      >
        <WithStyles(ForwardRef(Typography))
          variant="h6"
        >
          <b>
            Test instrument 1
          </b>
        </WithStyles(ForwardRef(Typography))>
        <WithStyles(ForwardRef(Divider))
          className="makeStyles-divider-54"
        />
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs={true}
      >
        <WithStyles(ForwardRef(Typography))
          variant="overline"
        >
          instruments.details.description
        </WithStyles(ForwardRef(Typography))>
        <WithStyles(ForwardRef(Typography))>
          <b>
            foo bar
          </b>
        </WithStyles(ForwardRef(Typography))>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs={true}
      >
        <WithStyles(ForwardRef(Typography))
          variant="overline"
        >
          instruments.details.type
        </WithStyles(ForwardRef(Typography))>
        <WithStyles(ForwardRef(Typography))>
          <b />
        </WithStyles(ForwardRef(Typography))>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        item={true}
        xs={true}
      >
        <WithStyles(ForwardRef(Typography))
          variant="overline"
        >
          instruments.details.url
        </WithStyles(ForwardRef(Typography))>
        <WithStyles(ForwardRef(Typography))>
          <b>
            <WithStyles(ForwardRef(Link))
              href="test url"
            >
              test url
            </WithStyles(ForwardRef(Link))>
          </b>
        </WithStyles(ForwardRef(Typography))>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
  </div>
</div>
`;

exports[`ISIS Instruments table component renders names as links 1`] = `
Array [
  <WithStyles(ForwardRef(Link))
    component={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "displayName": "Link",
        "propTypes": Object {
          "innerRef": [Function],
          "onClick": [Function],
          "replace": [Function],
          "target": [Function],
          "to": [Function],
        },
        "render": [Function],
      }
    }
    to="/browse/instrument/1/facilityCycle"
  >
    <ForwardRef(Link)
      classes={
        Object {
          "button": "MuiLink-button",
          "focusVisible": "Mui-focusVisible",
          "root": "MuiLink-root",
          "underlineAlways": "MuiLink-underlineAlways",
          "underlineHover": "MuiLink-underlineHover",
          "underlineNone": "MuiLink-underlineNone",
        }
      }
      component={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "displayName": "Link",
          "propTypes": Object {
            "innerRef": [Function],
            "onClick": [Function],
            "replace": [Function],
            "target": [Function],
            "to": [Function],
          },
          "render": [Function],
        }
      }
      to="/browse/instrument/1/facilityCycle"
    >
      <WithStyles(ForwardRef(Typography))
        className="MuiLink-root MuiLink-underlineHover"
        color="primary"
        component={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "displayName": "Link",
            "propTypes": Object {
              "innerRef": [Function],
              "onClick": [Function],
              "replace": [Function],
              "target": [Function],
              "to": [Function],
            },
            "render": [Function],
          }
        }
        onBlur={[Function]}
        onFocus={[Function]}
        to="/browse/instrument/1/facilityCycle"
        variant="inherit"
      >
        <ForwardRef(Typography)
          className="MuiLink-root MuiLink-underlineHover"
          classes={
            Object {
              "alignCenter": "MuiTypography-alignCenter",
              "alignJustify": "MuiTypography-alignJustify",
              "alignLeft": "MuiTypography-alignLeft",
              "alignRight": "MuiTypography-alignRight",
              "body1": "MuiTypography-body1",
              "body2": "MuiTypography-body2",
              "button": "MuiTypography-button",
              "caption": "MuiTypography-caption",
              "colorError": "MuiTypography-colorError",
              "colorInherit": "MuiTypography-colorInherit",
              "colorPrimary": "MuiTypography-colorPrimary",
              "colorSecondary": "MuiTypography-colorSecondary",
              "colorTextPrimary": "MuiTypography-colorTextPrimary",
              "colorTextSecondary": "MuiTypography-colorTextSecondary",
              "displayBlock": "MuiTypography-displayBlock",
              "displayInline": "MuiTypography-displayInline",
              "gutterBottom": "MuiTypography-gutterBottom",
              "h1": "MuiTypography-h1",
              "h2": "MuiTypography-h2",
              "h3": "MuiTypography-h3",
              "h4": "MuiTypography-h4",
              "h5": "MuiTypography-h5",
              "h6": "MuiTypography-h6",
              "noWrap": "MuiTypography-noWrap",
              "overline": "MuiTypography-overline",
              "paragraph": "MuiTypography-paragraph",
              "root": "MuiTypography-root",
              "srOnly": "MuiTypography-srOnly",
              "subtitle1": "MuiTypography-subtitle1",
              "subtitle2": "MuiTypography-subtitle2",
            }
          }
          color="primary"
          component={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "displayName": "Link",
              "propTypes": Object {
                "innerRef": [Function],
                "onClick": [Function],
                "replace": [Function],
                "target": [Function],
                "to": [Function],
              },
              "render": [Function],
            }
          }
          onBlur={[Function]}
          onFocus={[Function]}
          to="/browse/instrument/1/facilityCycle"
          variant="inherit"
        >
          <Link
            className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
            onBlur={[Function]}
            onFocus={[Function]}
            to="/browse/instrument/1/facilityCycle"
          >
            <LinkAnchor
              className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
              href="/browse/instrument/1/facilityCycle"
              navigate={[Function]}
              onBlur={[Function]}
              onFocus={[Function]}
            >
              <a
                className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
                href="/browse/instrument/1/facilityCycle"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
              >
                Test instrument 1
              </a>
            </LinkAnchor>
          </Link>
        </ForwardRef(Typography)>
      </WithStyles(ForwardRef(Typography))>
    </ForwardRef(Link)>
  </WithStyles(ForwardRef(Link))>,
  <WithStyles(ForwardRef(Link))
    component={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "displayName": "Link",
        "propTypes": Object {
          "innerRef": [Function],
          "onClick": [Function],
          "replace": [Function],
          "target": [Function],
          "to": [Function],
        },
        "render": [Function],
      }
    }
    to="/browse/instrument/2/facilityCycle"
  >
    <ForwardRef(Link)
      classes={
        Object {
          "button": "MuiLink-button",
          "focusVisible": "Mui-focusVisible",
          "root": "MuiLink-root",
          "underlineAlways": "MuiLink-underlineAlways",
          "underlineHover": "MuiLink-underlineHover",
          "underlineNone": "MuiLink-underlineNone",
        }
      }
      component={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "displayName": "Link",
          "propTypes": Object {
            "innerRef": [Function],
            "onClick": [Function],
            "replace": [Function],
            "target": [Function],
            "to": [Function],
          },
          "render": [Function],
        }
      }
      to="/browse/instrument/2/facilityCycle"
    >
      <WithStyles(ForwardRef(Typography))
        className="MuiLink-root MuiLink-underlineHover"
        color="primary"
        component={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "displayName": "Link",
            "propTypes": Object {
              "innerRef": [Function],
              "onClick": [Function],
              "replace": [Function],
              "target": [Function],
              "to": [Function],
            },
            "render": [Function],
          }
        }
        onBlur={[Function]}
        onFocus={[Function]}
        to="/browse/instrument/2/facilityCycle"
        variant="inherit"
      >
        <ForwardRef(Typography)
          className="MuiLink-root MuiLink-underlineHover"
          classes={
            Object {
              "alignCenter": "MuiTypography-alignCenter",
              "alignJustify": "MuiTypography-alignJustify",
              "alignLeft": "MuiTypography-alignLeft",
              "alignRight": "MuiTypography-alignRight",
              "body1": "MuiTypography-body1",
              "body2": "MuiTypography-body2",
              "button": "MuiTypography-button",
              "caption": "MuiTypography-caption",
              "colorError": "MuiTypography-colorError",
              "colorInherit": "MuiTypography-colorInherit",
              "colorPrimary": "MuiTypography-colorPrimary",
              "colorSecondary": "MuiTypography-colorSecondary",
              "colorTextPrimary": "MuiTypography-colorTextPrimary",
              "colorTextSecondary": "MuiTypography-colorTextSecondary",
              "displayBlock": "MuiTypography-displayBlock",
              "displayInline": "MuiTypography-displayInline",
              "gutterBottom": "MuiTypography-gutterBottom",
              "h1": "MuiTypography-h1",
              "h2": "MuiTypography-h2",
              "h3": "MuiTypography-h3",
              "h4": "MuiTypography-h4",
              "h5": "MuiTypography-h5",
              "h6": "MuiTypography-h6",
              "noWrap": "MuiTypography-noWrap",
              "overline": "MuiTypography-overline",
              "paragraph": "MuiTypography-paragraph",
              "root": "MuiTypography-root",
              "srOnly": "MuiTypography-srOnly",
              "subtitle1": "MuiTypography-subtitle1",
              "subtitle2": "MuiTypography-subtitle2",
            }
          }
          color="primary"
          component={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "displayName": "Link",
              "propTypes": Object {
                "innerRef": [Function],
                "onClick": [Function],
                "replace": [Function],
                "target": [Function],
                "to": [Function],
              },
              "render": [Function],
            }
          }
          onBlur={[Function]}
          onFocus={[Function]}
          to="/browse/instrument/2/facilityCycle"
          variant="inherit"
        >
          <Link
            className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
            onBlur={[Function]}
            onFocus={[Function]}
            to="/browse/instrument/2/facilityCycle"
          >
            <LinkAnchor
              className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
              href="/browse/instrument/2/facilityCycle"
              navigate={[Function]}
              onBlur={[Function]}
              onFocus={[Function]}
            >
              <a
                className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
                href="/browse/instrument/2/facilityCycle"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
              >
                Test 2
              </a>
            </LinkAnchor>
          </Link>
        </ForwardRef(Typography)>
      </WithStyles(ForwardRef(Typography))>
    </ForwardRef(Link)>
  </WithStyles(ForwardRef(Link))>,
]
`;

exports[`ISIS Instruments table component renders names as links in StudyHierarchy 1`] = `
Array [
  <WithStyles(ForwardRef(Link))
    component={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "displayName": "Link",
        "propTypes": Object {
          "innerRef": [Function],
          "onClick": [Function],
          "replace": [Function],
          "target": [Function],
          "to": [Function],
        },
        "render": [Function],
      }
    }
    to="/browseStudyHierarchy/instrument/1/study"
  >
    <ForwardRef(Link)
      classes={
        Object {
          "button": "MuiLink-button",
          "focusVisible": "Mui-focusVisible",
          "root": "MuiLink-root",
          "underlineAlways": "MuiLink-underlineAlways",
          "underlineHover": "MuiLink-underlineHover",
          "underlineNone": "MuiLink-underlineNone",
        }
      }
      component={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "displayName": "Link",
          "propTypes": Object {
            "innerRef": [Function],
            "onClick": [Function],
            "replace": [Function],
            "target": [Function],
            "to": [Function],
          },
          "render": [Function],
        }
      }
      to="/browseStudyHierarchy/instrument/1/study"
    >
      <WithStyles(ForwardRef(Typography))
        className="MuiLink-root MuiLink-underlineHover"
        color="primary"
        component={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "displayName": "Link",
            "propTypes": Object {
              "innerRef": [Function],
              "onClick": [Function],
              "replace": [Function],
              "target": [Function],
              "to": [Function],
            },
            "render": [Function],
          }
        }
        onBlur={[Function]}
        onFocus={[Function]}
        to="/browseStudyHierarchy/instrument/1/study"
        variant="inherit"
      >
        <ForwardRef(Typography)
          className="MuiLink-root MuiLink-underlineHover"
          classes={
            Object {
              "alignCenter": "MuiTypography-alignCenter",
              "alignJustify": "MuiTypography-alignJustify",
              "alignLeft": "MuiTypography-alignLeft",
              "alignRight": "MuiTypography-alignRight",
              "body1": "MuiTypography-body1",
              "body2": "MuiTypography-body2",
              "button": "MuiTypography-button",
              "caption": "MuiTypography-caption",
              "colorError": "MuiTypography-colorError",
              "colorInherit": "MuiTypography-colorInherit",
              "colorPrimary": "MuiTypography-colorPrimary",
              "colorSecondary": "MuiTypography-colorSecondary",
              "colorTextPrimary": "MuiTypography-colorTextPrimary",
              "colorTextSecondary": "MuiTypography-colorTextSecondary",
              "displayBlock": "MuiTypography-displayBlock",
              "displayInline": "MuiTypography-displayInline",
              "gutterBottom": "MuiTypography-gutterBottom",
              "h1": "MuiTypography-h1",
              "h2": "MuiTypography-h2",
              "h3": "MuiTypography-h3",
              "h4": "MuiTypography-h4",
              "h5": "MuiTypography-h5",
              "h6": "MuiTypography-h6",
              "noWrap": "MuiTypography-noWrap",
              "overline": "MuiTypography-overline",
              "paragraph": "MuiTypography-paragraph",
              "root": "MuiTypography-root",
              "srOnly": "MuiTypography-srOnly",
              "subtitle1": "MuiTypography-subtitle1",
              "subtitle2": "MuiTypography-subtitle2",
            }
          }
          color="primary"
          component={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "displayName": "Link",
              "propTypes": Object {
                "innerRef": [Function],
                "onClick": [Function],
                "replace": [Function],
                "target": [Function],
                "to": [Function],
              },
              "render": [Function],
            }
          }
          onBlur={[Function]}
          onFocus={[Function]}
          to="/browseStudyHierarchy/instrument/1/study"
          variant="inherit"
        >
          <Link
            className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
            onBlur={[Function]}
            onFocus={[Function]}
            to="/browseStudyHierarchy/instrument/1/study"
          >
            <LinkAnchor
              className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
              href="/browseStudyHierarchy/instrument/1/study"
              navigate={[Function]}
              onBlur={[Function]}
              onFocus={[Function]}
            >
              <a
                className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
                href="/browseStudyHierarchy/instrument/1/study"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
              >
                Test instrument 1
              </a>
            </LinkAnchor>
          </Link>
        </ForwardRef(Typography)>
      </WithStyles(ForwardRef(Typography))>
    </ForwardRef(Link)>
  </WithStyles(ForwardRef(Link))>,
  <WithStyles(ForwardRef(Link))
    component={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "displayName": "Link",
        "propTypes": Object {
          "innerRef": [Function],
          "onClick": [Function],
          "replace": [Function],
          "target": [Function],
          "to": [Function],
        },
        "render": [Function],
      }
    }
    to="/browseStudyHierarchy/instrument/2/study"
  >
    <ForwardRef(Link)
      classes={
        Object {
          "button": "MuiLink-button",
          "focusVisible": "Mui-focusVisible",
          "root": "MuiLink-root",
          "underlineAlways": "MuiLink-underlineAlways",
          "underlineHover": "MuiLink-underlineHover",
          "underlineNone": "MuiLink-underlineNone",
        }
      }
      component={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "displayName": "Link",
          "propTypes": Object {
            "innerRef": [Function],
            "onClick": [Function],
            "replace": [Function],
            "target": [Function],
            "to": [Function],
          },
          "render": [Function],
        }
      }
      to="/browseStudyHierarchy/instrument/2/study"
    >
      <WithStyles(ForwardRef(Typography))
        className="MuiLink-root MuiLink-underlineHover"
        color="primary"
        component={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "displayName": "Link",
            "propTypes": Object {
              "innerRef": [Function],
              "onClick": [Function],
              "replace": [Function],
              "target": [Function],
              "to": [Function],
            },
            "render": [Function],
          }
        }
        onBlur={[Function]}
        onFocus={[Function]}
        to="/browseStudyHierarchy/instrument/2/study"
        variant="inherit"
      >
        <ForwardRef(Typography)
          className="MuiLink-root MuiLink-underlineHover"
          classes={
            Object {
              "alignCenter": "MuiTypography-alignCenter",
              "alignJustify": "MuiTypography-alignJustify",
              "alignLeft": "MuiTypography-alignLeft",
              "alignRight": "MuiTypography-alignRight",
              "body1": "MuiTypography-body1",
              "body2": "MuiTypography-body2",
              "button": "MuiTypography-button",
              "caption": "MuiTypography-caption",
              "colorError": "MuiTypography-colorError",
              "colorInherit": "MuiTypography-colorInherit",
              "colorPrimary": "MuiTypography-colorPrimary",
              "colorSecondary": "MuiTypography-colorSecondary",
              "colorTextPrimary": "MuiTypography-colorTextPrimary",
              "colorTextSecondary": "MuiTypography-colorTextSecondary",
              "displayBlock": "MuiTypography-displayBlock",
              "displayInline": "MuiTypography-displayInline",
              "gutterBottom": "MuiTypography-gutterBottom",
              "h1": "MuiTypography-h1",
              "h2": "MuiTypography-h2",
              "h3": "MuiTypography-h3",
              "h4": "MuiTypography-h4",
              "h5": "MuiTypography-h5",
              "h6": "MuiTypography-h6",
              "noWrap": "MuiTypography-noWrap",
              "overline": "MuiTypography-overline",
              "paragraph": "MuiTypography-paragraph",
              "root": "MuiTypography-root",
              "srOnly": "MuiTypography-srOnly",
              "subtitle1": "MuiTypography-subtitle1",
              "subtitle2": "MuiTypography-subtitle2",
            }
          }
          color="primary"
          component={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "displayName": "Link",
              "propTypes": Object {
                "innerRef": [Function],
                "onClick": [Function],
                "replace": [Function],
                "target": [Function],
                "to": [Function],
              },
              "render": [Function],
            }
          }
          onBlur={[Function]}
          onFocus={[Function]}
          to="/browseStudyHierarchy/instrument/2/study"
          variant="inherit"
        >
          <Link
            className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
            onBlur={[Function]}
            onFocus={[Function]}
            to="/browseStudyHierarchy/instrument/2/study"
          >
            <LinkAnchor
              className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
              href="/browseStudyHierarchy/instrument/2/study"
              navigate={[Function]}
              onBlur={[Function]}
              onFocus={[Function]}
            >
              <a
                className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
                href="/browseStudyHierarchy/instrument/2/study"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
              >
                Test 2
              </a>
            </LinkAnchor>
          </Link>
        </ForwardRef(Typography)>
      </WithStyles(ForwardRef(Typography))>
    </ForwardRef(Link)>
  </WithStyles(ForwardRef(Link))>,
]
`;
